Ensure button and email field are connected on mobile.

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -454,7 +454,7 @@
   .cta-box input[type='email'] {
     width: auto;
     min-width: 100px;
-    width: 65%;
+    width: 66%;
   }
   .cta-box .btn {
     left: 65%;
