--- a/src/css/inc/basics.styl
+++ b/src/css/inc/basics.styl
@@ -231,7 +231,7 @@ footer
     input[type='email']
       width auto
       min-width 100px
-      width 65%
+      width 66%
     .btn
       left 65%
       min-width 100px
